--- a/footer.html
+++ b/footer.html
@@ -53,10 +53,10 @@
 
         <div class="social">
             <h4 style="width: auto; margin-bottom: 0px;">Social</h4>
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="image"><img src="./image/instagram.png" alt="" class="image1"></a>
-            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" class="image"><img src="./image/linkedin-logo-png-1853.png" alt="" class="image1" style="margin-left: 30px;"></a>
-            <a href="https://www.spotify.com/" target="_blank" rel="noopener noreferrer" class="image"><img src="./image/spotify-logo-png-7056.png" alt="" class="image1" style="margin-left: 60px;"></a>
-            <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="./image/youtube-logo-png-2067.png" alt="" class="image1" style="margin-left: 90px; width: 20px;"></a>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="./image/instagram.png" alt="" class="image1"></a>
+            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><img src="./image/linkedin-logo-png-1853.png" alt="" class="image1" style="margin-left: 40px;"></a>
+            <a href="https://www.spotify.com/" target="_blank" rel="noopener noreferrer"><img src="./image/spotify-logo-png-7056.png" alt="" class="image1" style="margin-left: 75px;"></a>
+            <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="./image/youtube-logo-png-2067.png" alt="" class="image1" style="margin-left: 115px; width: 30px;"></a>
         </div>
 
         <form>
