--- a/web/mob.html
+++ b/web/mob.html
@@ -68,7 +68,7 @@
             <input type="submit" value="Get Started" class="button1">
         </form>
 
-
+        <!-- mobile view footer -->
 
     </footer>
     <footer class="mob" style="display: flex; flex-direction: column; ">
