--- a/web/mob.html
+++ b/web/mob.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link rel="stylesheet" type="text/css" href="css/common.css" />
-    <link rel="stylesheet" type="text/css" href="css/fonts.css" />
     <link rel="stylesheet" type="text/css" href="css/mob.css" />
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 
@@ -55,11 +53,11 @@
         </div>
 
         <div class="social">
-            <h4 style="width: auto; margin-bottom: 0px;">Social</h4>
+            <h4 style="width: auto; margin-bottom: 13.4px;">Social</h4>
             <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="./image/instagram.png" alt="" class="image2"></a>
-            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><img src="./image/linkedin-logo-png-1853.png" alt="" class="image2" style="margin-left: 40px;"></a>
-            <a href="https://www.spotify.com/" target="_blank" rel="noopener noreferrer"><img src="./image/spotify-logo-png-7056.png" alt="" class="image2" style="margin-left: 75px;"></a>
-            <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="./image/youtube-logo-png-2067.png" alt="" class="image2" style="margin-left: 115px; width: 30px;"></a>
+            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><img src="./image/linkedin-logo-png-1853.png" alt="" class="image2" style="margin-left: 55px;"></a>
+            <a href="https://www.spotify.com/" target="_blank" rel="noopener noreferrer"><img src="./image/spotify-logo-png-7056.png" alt="" class="image2" style="margin-left: 105px;"></a>
+            <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="./image/youtube-logo-png-2067.png" alt="" class="image2" style="margin-left: 152px; width: 35px 25px;"></a>
         </div>
 
         <form class="form">
@@ -67,11 +65,20 @@
             <input type="email" id="fname" name="fname" class="box1" placeholder="Enter your email ">
             <input type="submit" value="Get Started" class="button1">
         </form>
+        <div class="footer-space"></div>
+        <div class="footer-last1">
+            <h5 class="white"> <span class="white1"> Made with ❤️</span> <span class="white1">from Federation of Entrepreneurship Development</span> </h5>
 
-        <!-- mobile view footer -->
+        </div>
+
+        <div class="footer-last2">
+            <h5 class="black"> <span class="white2"> To boost the confidence of aspiring entrepreneurs worldwide.</span> <span class="white2">Together we can change the world.</span> </h5>
+
+        </div>
+
 
     </footer>
-    <footer class="mob" style="display: flex; flex-direction: column; ">
+    <!-- <footer class="mob" style="display: flex; flex-direction: column; ">
 
 
         <div class=" footer footer-block layout ">
@@ -98,6 +105,7 @@
 
             <form>
                 <h4 class="footer-subtitle1 layout ">Newsletter</h4>
+                <br>
                 <input type="email " id="fname " name="fname " class="box " placeholder="Enter your email ">
                 <input type="submit" value="Get Started" class="button">
             </form>
@@ -167,7 +175,7 @@ System Status</pre
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
 </body>
 
