--- a/web/mob.html
+++ b/web/mob.html
@@ -78,7 +78,7 @@
 
 
     </footer>
-    <!-- <footer class="mob" style="display: flex; flex-direction: column; ">
+    <footer class="mob" style="display: flex; flex-direction: column; ">
 
 
         <div class=" footer footer-block layout ">
@@ -175,7 +175,7 @@ System Status</pre
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
 </body>
 
