--- a/web/home/home.html
+++ b/web/home/home.html
@@ -82,7 +82,7 @@
     </div>
 
     <div class="flex-3" style="  background-color: #0f0e0e; ">
-        <h1 style="margin-top: 275px; ">What we <span class="orange">believe</span> in 🤔</h1>
+        <h1 style="margin-top: 320px; ">What we <span class="orange">believe</span> in 🤔</h1>
         <div class=" space2 "></div>
         <div class="box">
             <h4>Providing a <span class="orange">forum for young entrepreneurs</span> and assisting them in launching their businesses</h4>
@@ -100,6 +100,46 @@
             <h4>Aiming in <span class="orange"> providing a hospitable and welcoming environment </span> among team members, collaborators, and participants.</h4>
         </div>
     </div>
+    <div class="flex-4" style="  background-color: #0f0e0e; ">
+        <h1 style="margin-top: 130px;">What do <span class=" orange ">they say</span> about us?</h1>
+        <div class="flex-5 ">
+            <div class="box1">
+                <p style="color: #000000;" class="p1">
+                    “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Gravida consectetur nec eros, in. Sed velit enim, egestas interdum sit et. Mi commodo mi nec adipiscing lobortis dui elementum quisque. Placerat tincidunt commodo mauris aliquet vulputate amet,
+                    id tortor, faucibus.”
+                </p>
+                <div class=" flex-internal " style="margin-top: 150px;width: 290px;height: 80px;">
+                    <img src="./homeImage/Frame 25.png " alt=" ">
+                    <div style="margin-left:30px; margin-top:20px;display:flex ; flex-direction:column ; ">
+                        <h5 class="orange" style="font-family: 'Manrope', sans-serif;"> Lyla Rosen</h5>
+                        <div style="margin-top:4px ; "></div>
+                        <h5 style="color: #000000;font-family: 'Manrope', sans-serif;">Chief Product Officer, Micro</h5>
+                    </div>
+
+
+                </div>
+            </div>
+
+            <div class="box1">
+                <p style="color: #000000; " class="p1">“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Gravida consectetur nec eros, in. Sed velit enim, egestas interdum sit et. Mi commodo mi nec adipiscing lobortis dui elementum quisque. Placerat tincidunt commodo mauris aliquet
+                    vulputate amet, id tortor, faucibus.”</p>
+                <div class="flex-internal " style="margin-top: 150px;width: 290px;height: 80px;">
+                    <img src="./homeImage/Frame 25.png " alt=" ">
+                    <div style="margin-left:30px; margin-top:20px;display:flex ; flex-direction:column ; ">
+                        <h5 class="orange" style="font-family: 'Manrope', sans-serif;">Lyla Rosen</h5>
+                        <div style="margin-top:4px ; "></div>
+                        <h5 style="color: #000000;font-family: 'Manrope', sans-serif;">Chief Product Officer, Micro</h5>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div style="margin-top:30px; display: flex;flex-direction: row;">
+            <a href="# " target="_blank " rel="noopener noreferrer ">See all</a>
+            <div class="ArrowDiv ">></div>
+        </div>
+    </div>
+    <div class="corousal"></div>
 
 </body>
 
