--- a/web/home/home.html
+++ b/web/home/home.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="lower.css">
     <title>FED</title>
 </head>
 
@@ -140,6 +141,30 @@
         </div>
     </div>
     <div class="corousal"></div>
+    <div class="lower">
+        <div class="flex-6">
+            <div class="flex-lower-1">
+                <div class="lower1">Let’s Talk <span class="orange">Business</span></div>
+                <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris, faucibus id dignissim massa sed augue ut magna aliquet.</p>
+            </div>
+            <div class="flex-lower-2">
+                <div class="col-1">
+                    <label for="fname" class="color2" style="margin-bottom: 10px; ">Name:</label>
+                    <input type="text" name="" id="fname">
+                </div>
+                <div class="col-1">
+                    <label for="femail" class="color2" style="margin-bottom: 10px;">Email:</label>
+                    <input type=" email " name=" " class="femail">
+                </div>
+                <div class="col-1 ">
+                    <label for="fmessage " class="color2" style="margin-bottom: 10px;">Message:</label>
+                    <input type="text " " name=" " class="fmessage ">
+                </div>
+                <input type="submit " value=" Send " class=" submit ">
+            </div>
+        </div>
+
+    </div>
 
 </body>
 
