--- a/web/home/home.html
+++ b/web/home/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="lower.css">
+    <link rel="stylesheet" href="footer1.css">
     <title>FED</title>
 </head>
 
@@ -61,7 +62,7 @@
     </nav>
 
     <div class="upper1">
-        <img src="./homeImage/image-22.png" alt="" class="img1">
+
     </div>
     <div class="upper2">
 
@@ -160,12 +161,13 @@
                     <label for="fmessage " class="color2" style="margin-bottom: 10px;">Message:</label>
                     <input type="text " " name=" " class="fmessage ">
                 </div>
-                <input type="submit " value=" Send " class=" submit ">
+                <input type="submit " value="Send " class=" submit1 ">
+                
             </div>
         </div>
 
     </div>
-
+    
 </body>
 
 </html>
