--- a/web/home/home.html
+++ b/web/home/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="lower.css">
-    <link rel="stylesheet" href="footer1.css">
+    <link rel="stylesheet" href="corousal.css">
     <title>FED</title>
 </head>
 
@@ -62,8 +62,12 @@
     </nav>
 
     <div class="upper1">
-
+        <div class="flex-0">
+            <h3 style="margin-top: 317px;">Federation of <span class="orange">Entrepreneurship</span> Development</h3>
+            <p style="margin-top: 30px; " class="p4">The Federation of Entrepreneurship Development is the student body of KIIT TBI which aims to bring all ideas, potential startups under one umbrella.</p>
+        </div>
     </div>
+
     <div class="upper2">
 
         <div class="flex-1">
@@ -141,33 +145,39 @@
             <div class="ArrowDiv ">></div>
         </div>
     </div>
-    <div class="corousal"></div>
-    <div class="lower">
-        <div class="flex-6">
-            <div class="flex-lower-1">
-                <div class="lower1">Let’s Talk <span class="orange">Business</span></div>
-                <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris, faucibus id dignissim massa sed augue ut magna aliquet.</p>
+    <div class="corousal">
+        <div class="flex-7">
+            <h3 style="color:#000000 ; margin-top: 90px;">We <span class="orange">work</span> with...</h3>
+            <div class="corousal-1"></div>
+            <p class="p5" style="color:#000000 ;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper vel suspendisse pharetra, ultrices. Tortor risus hac varius ipsum. Feugiat nunc feugiat amet ac sit elit pretium. Duis praesent volutpat quis euismod cras maecenas viverra arcu.</p>
+        </div>
+    </div>
+    <div class=" lower ">
+        <div class="flex-6 ">
+            <div class="flex-lower-1 ">
+                <div class="lower1 ">Let’s Talk <span class="orange ">Business</span></div>
+                <p class="p2 ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris, faucibus id dignissim massa sed augue ut magna aliquet.</p>
             </div>
-            <div class="flex-lower-2">
-                <div class="col-1">
-                    <label for="fname" class="color2" style="margin-bottom: 10px; ">Name:</label>
-                    <input type="text" name="" id="fname">
-                </div>
-                <div class="col-1">
-                    <label for="femail" class="color2" style="margin-bottom: 10px;">Email:</label>
-                    <input type=" email " name=" " class="femail">
+            <div class="flex-lower-2 ">
+                <div class="col-1 ">
+                    <label for="fname " class="color2 " style="margin-bottom: 10px; ">Name:</label>
+                    <input type="text " name=" " id="fname ">
                 </div>
                 <div class="col-1 ">
-                    <label for="fmessage " class="color2" style="margin-bottom: 10px;">Message:</label>
-                    <input type="text " " name=" " class="fmessage ">
+                    <label for="femail " class="color2 " style="margin-bottom: 10px; ">Email:</label>
+                    <input type=" email " name=" " class="femail ">
                 </div>
-                <input type="submit " value="Send " class=" submit1 ">
-                
-            </div>
+                <div class="col-1 ">
+                    <label for="fmessage " class="color2 " style="margin-bottom: 10px; ">Message:</label>
+                    <input type="text " " name=" " class="fmessage ">
         </div>
+        <input type="submit " value="Send " class=" submit1 ">
 
     </div>
-    
+    </div>
+
+    </div>
+
 </body>
 
 </html>
