update in corousal

--- a/web/home/home.html
+++ b/web/home/home.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="lower.css">
     <link rel="stylesheet" href="corousal.css">
+    <!-- <link href='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css' rel='stylesheet'>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css' rel='stylesheet'>
+    <script type='text/javascript' src=''></script>
+    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
+    <script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script> -->
     <title>FED</title>
 </head>
 
@@ -147,9 +152,11 @@
     </div>
     <div class="corousal">
         <div class="flex-7">
-            <h3 style="color:#000000 ; margin-top: 90px;">We <span class="orange">work</span> with...</h3>
-            <div class="corousal-1"></div>
-            <p class="p5" style="color:#000000 ;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper vel suspendisse pharetra, ultrices. Tortor risus hac varius ipsum. Feugiat nunc feugiat amet ac sit elit pretium. Duis praesent volutpat quis euismod cras maecenas viverra arcu.</p>
+            <h3 style="color:#000000 ; margin-top: 90px; margin-left: 450px;">We <span class="orange">work</span> with...</h3>
+            <div class="corousal-1" oncontextmenu='return false' class='snippet-body'>
+
+            </div>
+            <p class="p5" style="color:#000000 ;  margin-left: 350px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper vel suspendisse pharetra, ultrices. Tortor risus hac varius ipsum. Feugiat nunc feugiat amet ac sit elit pretium. Duis praesent volutpat quis euismod cras maecenas viverra arcu.</p>
         </div>
     </div>
     <div class=" lower ">
