updated input name

--- a/web/home/home.html
+++ b/web/home/home.html
@@ -168,7 +168,7 @@
             <div class="flex-lower-2 ">
                 <div class="col-1 ">
                     <label for="fname " class="color2 " style="margin-bottom: 10px; ">Name:</label>
-                    <input type="text " name=" " id="fname ">
+                    <input type="text " name=" " class="fname1 ">
                 </div>
                 <div class="col-1 ">
                     <label for="femail " class="color2 " style="margin-bottom: 10px; ">Email:</label>
