--- a/web/home/home.html
+++ b/web/home/home.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="lower.css">
     <link rel="stylesheet" href="corousal.css">
+    <link rel="stylesheet" href="footer.css">
     <title>FED</title>
 </head>
 
@@ -172,12 +173,125 @@
                     <label for="fmessage " class="color2 " style="margin-bottom: 10px; ">Message:</label>
                     <input type="text " " name=" " class="fmessage ">
         </div>
-        <input type="submit " value="Send " class=" submit1 ">
+        <button type="submit " class=" submit1 ">Send</button>
 
     </div>
     </div>
 
     </div>
+    <footer class="desFooter ">
+        <div class="logo ">
+            <img src="./Img/FedLogo.png " alt=" " class="imglogo ">
+            <p class="FED ">FED</p>
+        </div>
+        <div class="FooterFlexDiv ">
+            <div class="FooterDes ">
+                <div class="row1 ">
+                    <h4 class="content ">Company</h4>
+                    <a href="#about " class="list ">About</a>
+                    <a href="#about " class="list ">Newsroom</a>
+                    <a href="#about " class="list ">Contact</a>
+                    <a href="#about " class="list ">Carrers</a>
+                </div>
+                <div class="row2 ">
+                    <h4 class="content ">About Us</h4>
+                    <a href="#about " class="list ">Manifesto</a>
+                    <a href="#about " class="list ">Press</a>
+                    <a href="#about " class="list ">{Investors}</a>
+                    <a href="#about " class="list ">Partnerships</a>
+                    <a href="# " class="list ">Blog</a>
+                </div>
+                <div class="row3 ">
+                    <h4 class="content ">Services</h4>
+                    <a href="#about " class="list ">Startups</a>
+                    <a href="#about " class="list ">Corporates</a>
+                    <a href="#about " class="list ">Investors</a>
+                    <a href="#about " class="list ">Governments</a>
+                    <a href="#about " class="list ">Incubators&</a>
+                    <a href="#about " class="list ">Acclerators</a>
+                </div>
+                <div class="row4 ">
+                    <h4 class="content ">Help</h4>
+
+                    <a href="#about " class="list ">Accessibility Statement</a>
+                    <a href="#about " class="list ">Startup Support </a>
+                    <a href="#about " class="list ">Corporate Support</a>
+                    <a href="#about " class="list ">System Status</a>
+                </div>
+            </div>
+            <div class="FooterRightDiv ">
+                <h4 class="social ">Social</h4>
+                <div class="iconsDiv ">
+                    <img src="./Img/instagram.png " alt="instagram " class="IconsTag ">
+                    <img src="./Img/linkedin.png " alt="linkedin " class="IconsTag ">
+                    <img src="./Img/spotify.png " alt="spotify " class="IconsTag ">
+                    <img src="./Img/youtube.png " alt="youtube " class="IconsTag ">
+                </div>
+                <p class="newsletter ">Newsletter</p>
+                <div class="newsletterPositionDiv ">
+                    <input type="text " name=" " class="newsLettrinp " placeholder="Enter Your Email ">
+                    <button class="GetStarted ">Get Started</button>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <footer class="MoboFooter ">
+        <div class="MoboFooterLogoDiv ">
+            <div class="logo ">
+                <img src="./Img/FedLogo.png " alt=" " class="imglogo ">
+                <p class="LogoFED " class="FED ">FED</p>
+            </div>
+            <div class="iconsDiv ">
+                <img src="./Img/instagram.png " alt="instagram " class="IconsTag ">
+                <img src="./Img/linkedin.png " alt="linkedin " class="IconsTag ">
+                <img src="./Img/spotify.png " alt="spotify " class="IconsTag ">
+                <img src="./Img/youtube.png " alt="youtube " class="IconsTag ">
+            </div>
+        </div>
+        <div class="FooterRightDiv ">
+            <p class="newsletter ">Newsletter</p>
+            <div class="newsletterPositionDiv ">
+                <input type="text " name=" " class="newsLettrinp " placeholder="Enter Your Email ">
+                <button class="GetStarted ">Get Started</button>
+            </div>
+        </div>
+        <div class="FooterFlexDiv ">
+            <div class="FooterDes ">
+                <div class="row1 ">
+                    <h4 class="content ">Company</h4>
+                    <a href="#about " class="list ">About</a>
+                    <a href="#about " class="list ">Newsroom</a>
+                    <a href="#about " class="list ">Contact</a>
+                    <a href="#about " class="list ">Carrers</a>
+                </div>
+                <div class="row2 ">
+                    <h4 class="content ">About Us</h4>
+                    <a href="#about " class="list ">Manifesto</a>
+                    <a href="#about " class="list ">Press</a>
+                    <a href="#about " class="list ">{Investors}</a>
+                    <a href="#about " class="list ">Partnerships</a>
+                    <a href="# " class="list ">Blog</a>
+                </div>
+                <div class="row3 ">
+                    <h4 class="content ">Services</h4>
+                    <a href="#about " class="list ">Startups</a>
+                    <a href="#about " class="list ">Corporates</a>
+                    <a href="#about " class="list ">Investors</a>
+                    <a href="#about " class="list ">Governments</a>
+                    <a href="#about " class="list ">Incubators&</a>
+                    <a href="#about " class="list ">Acclerators</a>
+                </div>
+                <div class="row4 ">
+                    <h4 class="content ">Help</h4>
+
+                    <a href="#about " class="list ">Accessibility Statement</a>
+                    <a href="#about " class="list ">Startup Support </a>
+                    <a href="#about " class="list ">Corporate Support</a>
+                    <a href="#about " class="list ">System Status</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
