--- a/web/mob.html
+++ b/web/mob.html
@@ -1,181 +1,130 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" type="text/css" href="css/common.css" />
-    <link rel="stylesheet" type="text/css" href="css/mob.css" />
-    <link rel="stylesheet" type="text/css" href="css/footer.css">
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="footer.css ">
+    <title>Document</title>
 </head>
 
 <body>
-    <footer class="desktop">
-
-        <div class="logo">
-            <img src="./image/9769 [Converted] 2.png" alt="" sizes="(max-width:990px) 57.53px" class="imglogo">
-            <h1>FED</h1>
+    <footer class="desFooter ">
+        <div class="logo ">
+            <img src="./Img/FedLogo.png " alt=" " class="imglogo ">
+            <p class="FED ">FED</p>
         </div>
-        <div class="flex">
-            <div class="row1">
-                <h4>Company</h4>
-                <a href="#about">About</a>
-                <a href="#about">Newsroom</a>
-                <a href="#about">Contact</a>
-                <a href="#about">Carrers</a>
-            </div>
-            <div class="row2">
-                <h4>About Us</h4>
-                <a href="#about">Manifesto</a>
-                <a href="#about">Press</a>
-                <a href="#about">{Investors}</a>
-                <a href="#about">Partnerships</a>
-                <a href="#">Blog</a>
-            </div>
-            <div class="row3">
-                <h4>Services</h4>
-                <a href="#about">Startups</a>
-                <a href="#about">Corporates</a>
-                <a href="#about">Investors</a>
-                <a href="#about">Governments</a>
-                <a href="#about">Incubators&</a>
-                <a href="#about">Acclerators</a>
-            </div>
-            <div class="row4">
-                <h4>Help</h4>
-
-                <a href="#about">Accessibility Statement</a>
-                <a href="#about">Startup Support </a>
-                <a href="#about">Corporate Support</a>
-                <a href="#about">System Status</a>
-            </div>
-        </div>
-
-        <div class="social">
-            <h4 style="width: auto; margin-bottom: 13.4px;">Social</h4>
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="./image/instagram.png" alt="" class="image2"></a>
-            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><img src="./image/linkedin-logo-png-1853.png" alt="" class="image2" style="margin-left: 55px;"></a>
-            <a href="https://www.spotify.com/" target="_blank" rel="noopener noreferrer"><img src="./image/spotify-logo-png-7056.png" alt="" class="image2" style="margin-left: 105px;"></a>
-            <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="./image/youtube-logo-png-2067.png" alt="" class="image2" style="margin-left: 152px; width: 35px 25px;"></a>
-        </div>
-
-        <form class="form">
-            <h4 class="newsletter">Newsletter</h4>
-            <input type="email" id="fname" name="fname" class="box1" placeholder="Enter your email ">
-            <input type="submit" value="Get Started" class="button1">
-        </form>
-        <div class="footer-space"></div>
-        <div class="footer-last1">
-            <h5 class="white"> <span class="white1"> Made with ❤️</span> <span class="white1">from Federation of Entrepreneurship Development</span> </h5>
-
-        </div>
-
-        <div class="footer-last2">
-            <h5 class="black"> <span class="white2"> To boost the confidence of aspiring entrepreneurs worldwide.</span> <span class="white2">Together we can change the world.</span> </h5>
-
-        </div>
-
-
-    </footer>
-    <footer class="mob" style="display: flex; flex-direction: column; ">
-
-
-        <div class=" footer footer-block layout ">
-            <div class="footer-block1 layout ">
-                <div class="footer-block1-item ">
-                    <div class="footer-block2 layout ">
-                        <img src="assets/0cc241c696b927953ff9e95f3e236d49.png " alt=" " style="background-color:#F45725 ;border-radius: 25px;width: 28.26px; height: 28.26px; ">
-                        <div class="footer-block2-spacer "></div>
-                        <div class="footer-block2-item1 ">
-                            <div class="footer-block4 layout ">
-                                <h3 class="footer-subtitle layout ">FED</h3>
-                            </div>
-                        </div>
-                    </div>
+        <div class="FooterFlexDiv ">
+            <div class="FooterDes ">
+                <div class="row1 ">
+                    <h4 class="content">Company</h4>
+                    <a href="#about " class="list">About</a>
+                    <a href="#about " class="list">Newsroom</a>
+                    <a href="#about " class="list">Contact</a>
+                    <a href="#about " class="list">Carrers</a>
                 </div>
-                <div class="footer-block1-spacer "></div>
-                <div class="icon ">
-                    <a href="https://www.instagram.com/ " target="_blank " rel="noopener noreferrer " class="image "><img src="./assets/instagram.png " alt=" " class="image1 "></a>
-                    <a href="https://www.linkedin.com/ " target="_blank " rel="noopener noreferrer " class="image "><img src="./assets/linkedin-logo-png-1853.png " alt=" " class="image1 " style="margin-left: 20px; "></a>
-                    <a href="https://www.spotify.com/ " target="_blank " rel="noopener noreferrer " class="image "><img src="./assets/spotify-logo-png-7056.png " alt=" " style="margin-left: 8px; width: 23px;height: 23px; "></a>
-                    <a href="https://www.youtube.com/ " target="_blank " rel="noopener noreferrer "><img src="./assets/youtube-logo-png-2067.png " alt=" " class="image1 " style=" margin-left: 10px; "></a>
+                <div class="row2 ">
+                    <h4 class="content">About Us</h4>
+                    <a href="#about " class="list">Manifesto</a>
+                    <a href="#about " class="list">Press</a>
+                    <a href="#about " class="list">{Investors}</a>
+                    <a href="#about " class="list">Partnerships</a>
+                    <a href="# " class="list">Blog</a>
+                </div>
+                <div class="row3 ">
+                    <h4 class="content">Services</h4>
+                    <a href="#about " class="list">Startups</a>
+                    <a href="#about " class="list">Corporates</a>
+                    <a href="#about " class="list">Investors</a>
+                    <a href="#about " class="list">Governments</a>
+                    <a href="#about " class="list">Incubators&</a>
+                    <a href="#about " class="list">Acclerators</a>
+                </div>
+                <div class="row4 ">
+                    <h4 class="content">Help</h4>
+
+                    <a href="#about " class="list">Accessibility Statement</a>
+                    <a href="#about " class="list">Startup Support </a>
+                    <a href="#about " class="list">Corporate Support</a>
+                    <a href="#about " class="list">System Status</a>
                 </div>
             </div>
-
-            <form>
-                <h4 class="footer-subtitle1 layout ">Newsletter</h4>
-                <br>
-                <input type="email " id="fname " name="fname " class="box " placeholder="Enter your email ">
-                <input type="submit" value="Get Started" class="button">
-            </form>
-            <div class="footer-block12 layout ">
-                <div class="footer-block13 layout ">
-                    <h3 class="footer-subtitle1 layout ">Company</h3>
-                    <h5 class="footer-highlights2-box layout ">
-                        <pre class="footer-highlights2 ">
-About
-Newsroom
-Contact
-Carrers</pre
-            >
-          </h5>
-        </div>
-        <div class="footer-block14 layout ">
-          <h3 class="footer-subtitle1 layout1 ">Services</h3>
-          <h5 class="footer-highlights21-box layout ">
-            <pre class="footer-highlights2 ">
-Startups
-Corporates
-Investors
-Governments
-Incubators &amp; 
-Accelerators</pre
-            >
-          </h5>
-        </div>
-        <div class="footer-block15 layout ">
-          <h3 class="footer-subtitle1 layout2 " ">About Us</h3>
-        <h5 class="footer-highlights21-box layout ">
-            <pre class="footer-highlights2 ">
-Manifesto
-Press
-{Investors}
-Partnerships
-Blog</pre
-            >
-          </h5>
-        </div>
-        <div class="footer-block16 layout ">
-          <h3 class="footer-subtitle1 layout ">Help</h3>
-          <h5 class="footer-highlights21-box layout1 ">
-            <pre class="footer-highlights2 ">
-Accessibility Statement
-Startup Support
-Corporate Support
-System Status</pre
-            >
-          </h5>
-        </div>
-      </div>
-      <div class="footer-block17 layout ">
-        <div class="footer-block18 layout ">
-          <hr class="footer-line layout " />
-          <h5 class="footer-highlights3-box layout ">
-            <pre class="footer-highlights3 "><span class="footer-highlights3-span0 ">Made with ❤️ from 
-</span><span class="footer-highlights3-span1 ">Federation of Entrepreneurship Development.</span></pre>
-                    </h5>
-                    <div class="footer-group2 layout ">
-                        <div class="footer-block19 layout ">
-                            <h5 class="footer-highlights4 layout ">To boost the confidence of aspiring entrepreneurs worldwide.</h5>
-                            <h5 class="footer-highlights4 layout1 ">Together we can change the world.</h5>
-                        </div>
-                        <div class="footer-text-body-box layout "><pre class="footer-text-body ">Copyright 2022  </pre></div>
-                    </div>
+            <div class="FooterRightDiv ">
+                <h4 class="social ">Social</h4>
+                <div class="iconsDiv ">
+                    <img src="./Img/instagram.png " alt="instagram " class="IconsTag ">
+                    <img src="./Img/linkedin.png " alt="linkedin " class="IconsTag ">
+                    <img src="./Img/spotify.png " alt="spotify " class="IconsTag ">
+                    <img src="./Img/youtube.png " alt="youtube " class="IconsTag ">
+                </div>
+                <p class="newsletter ">Newsletter</p>
+                <div class="newsletterPositionDiv ">
+                    <input type="text " name=" " class="newsLettrinp " placeholder="Enter Your Email ">
+                    <button class="GetStarted ">Get Started</button>
                 </div>
             </div>
         </div>
     </footer>
+    <footer class="MoboFooter ">
+        <div class="MoboFooterLogoDiv ">
+            <div class="logo ">
+                <img src="./Img/FedLogo.png " alt=" " class="imglogo ">
+                <p class="LogoFED " class="FED ">FED</p>
+            </div>
+            <div class="iconsDiv ">
+                <img src="./Img/instagram.png " alt="instagram " class="IconsTag ">
+                <img src="./Img/linkedin.png " alt="linkedin " class="IconsTag ">
+                <img src="./Img/spotify.png " alt="spotify " class="IconsTag ">
+                <img src="./Img/youtube.png " alt="youtube " class="IconsTag ">
+            </div>
+        </div>
+        <div class="FooterRightDiv ">
+            <p class="newsletter ">Newsletter</p>
+            <div class="newsletterPositionDiv ">
+                <input type="text " name=" " class="newsLettrinp " placeholder="Enter Your Email ">
+                <button class="GetStarted ">Get Started</button>
+            </div>
+        </div>
+        <div class="FooterFlexDiv ">
+            <div class="FooterDes ">
+                <div class="row1 ">
+                    <h4 class="content">Company</h4>
+                    <a href="#about " class="list">About</a>
+                    <a href="#about " class="list">Newsroom</a>
+                    <a href="#about " class="list">Contact</a>
+                    <a href="#about " class="list">Carrers</a>
+                </div>
+                <div class="row2 ">
+                    <h4 class="content">About Us</h4>
+                    <a href="#about " class="list">Manifesto</a>
+                    <a href="#about " class="list">Press</a>
+                    <a href="#about " class="list">{Investors}</a>
+                    <a href="#about " class="list">Partnerships</a>
+                    <a href="# " class="list">Blog</a>
+                </div>
+                <div class="row3 ">
+                    <h4 class="content">Services</h4>
+                    <a href="#about " class="list">Startups</a>
+                    <a href="#about " class="list">Corporates</a>
+                    <a href="#about " class="list">Investors</a>
+                    <a href="#about " class="list">Governments</a>
+                    <a href="#about " class="list">Incubators&</a>
+                    <a href="#about " class="list">Acclerators</a>
+                </div>
+                <div class="row4 ">
+                    <h4 class="content">Help</h4>
+
+                    <a href="#about " class="list">Accessibility Statement</a>
+                    <a href="#about " class="list">Startup Support </a>
+                    <a href="#about " class="list">Corporate Support</a>
+                    <a href="#about " class="list">System Status</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
 
 </body>
 
