--- a/web/home/home.html
+++ b/web/home/home.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/nav.css">
-    <link rel="stylesheet" href="./css/home.css">
-    <link rel="stylesheet" href="./css/lower.css">
-    <link rel="stylesheet" href="./css/corousal.css">
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="lower.css">
+    <link rel="stylesheet" href="corousal.css">
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="media.css">
     <title>FED</title>
 </head>
 
@@ -24,12 +25,7 @@
                 <ul id="NavUl">
                     <li>Home</li>
                     <li id="newLiTag">Events
-                        <!-- <div class="ArrowDiv">
-                            <div class="NavArrow"></div>
-                        </div> -->
-                        <!-- <p id="NavNewPtag">
-                            New!
-                        </p> -->
+
                     </li>
                     <li>Podcasts</li>
                     <li>Our Team</li>
