--- a/web/home/home.html
+++ b/web/home/home.html
@@ -57,117 +57,119 @@
             </div>
         </div>
     </nav>
-
-    <div class="upper1">
-        <div class="flex-0">
-            <h3 style="margin-top: 317px;">Federation of <span class="orange">Entrepreneurship</span> Development</h3>
-            <p style="margin-top: 30px; " class="p4">The Federation of Entrepreneurship Development is the student body of KIIT TBI which aims to bring all ideas, potential startups under one umbrella.</p>
+    <div class="desktop">
+        <div class="upper1">
+            <div class="flex-0">
+                <h3 style="margin-top: 317px;">Federation of <span class="orange">Entrepreneurship</span> Development</h3>
+                <p style="margin-top: 30px; " class="p4">The Federation of Entrepreneurship Development is the student body of KIIT TBI which aims to bring all ideas, potential startups under one umbrella.</p>
+            </div>
         </div>
-    </div>
 
-    <div class="upper2">
+        <div class="upper2">
 
-        <div class="flex-1">
-            <di class="space1"></di>
-            <h1 class="orange">Know us </h1>
-            <h1 class=" space ">a little better..</h1>
-            <img src="./homeImage/image 7.png " alt=" ">
-            <div class=" space "></div>
-            <p class="para">Aenean ut nulla duis lacus, vitae. Nibh nisl ipsum id sem eget nulla nulla. In ac, ac at tempor vel. Sed at sed vel fringilla ligula pharetra, et nisl. Mauris hac non adipiscing molestie.Nunc, consequat et et lorem. Pulvinar aliquam, hac imperdiet
-                dignissim ut congue diam habitasse. Consectetur urna cursus tellus nulla pretium convallis.</p>
+            <div class="flex-1">
+                <di class="space1"></di>
+                <h1 class="orange">Know us </h1>
+                <h1 class=" space ">a little better..</h1>
+                <img src="./homeImage/image 7.png " alt=" ">
+                <div class=" space "></div>
+                <p class="para">Aenean ut nulla duis lacus, vitae. Nibh nisl ipsum id sem eget nulla nulla. In ac, ac at tempor vel. Sed at sed vel fringilla ligula pharetra, et nisl. Mauris hac non adipiscing molestie.Nunc, consequat et et lorem. Pulvinar aliquam, hac
+                    imperdiet dignissim ut congue diam habitasse. Consectetur urna cursus tellus nulla pretium convallis.</p>
+                <div class=" space2 "></div>
+                <div class="flex-2">
+                    <img src="./homeImage/Why.png" alt="" id="img1">
+                    <img src="./homeImage/How.png" alt="" id="img1">
+                    <img src="./homeImage/What.png" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="flex-3" style="  background-color: #0f0e0e; ">
+            <h1 style="margin-top: 320px; ">What we <span class="orange">believe</span> in 🤔</h1>
             <div class=" space2 "></div>
-            <div class="flex-2">
-                <img src="./homeImage/Why.png" alt="" id="img1">
-                <img src="./homeImage/How.png" alt="" id="img1">
-                <img src="./homeImage/What.png" alt="">
+            <div class="box">
+                <h4>Providing a <span class="orange">forum for young entrepreneurs</span> and assisting them in launching their businesses</h4>
+            </div>
+            <div class="box">
+                <h4>Providing useful information that indicates an organization's ability to <span class="orange">function as a cohesive one.</span> </h4>
+            </div>
+            <div class="box">
+                <h4>Organizing entrepreneurial activities to <span class="orange">boost the confidence</span> of aspiring entrepreneurs.</h4>
+            </div>
+            <div class="box">
+                <h4>Implementing an <span class="orange">industry-focused mindset</span> with a distinct perspective on things.</h4>
+            </div>
+            <div class="box">
+                <h4>Aiming in <span class="orange"> providing a hospitable and welcoming environment </span> among team members, collaborators, and participants.</h4>
             </div>
         </div>
-    </div>
+        <div class="flex-4" style="  background-color: #0f0e0e; ">
+            <h1 style="margin-top: 130px;">What do <span class=" orange ">they say</span> about us?</h1>
+            <div class="flex-5 ">
+                <div class="box1">
+                    <p style="color: #000000;" class="p1">
+                        “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Gravida consectetur nec eros, in. Sed velit enim, egestas interdum sit et. Mi commodo mi nec adipiscing lobortis dui elementum quisque. Placerat tincidunt commodo mauris aliquet vulputate amet,
+                        id tortor, faucibus.”
+                    </p>
+                    <div class=" flex-internal " style="margin-top: 150px;width: 290px;height: 80px;">
+                        <img src="./homeImage/Frame 25.png " alt=" ">
+                        <div style="margin-left:30px; margin-top:20px;display:flex ; flex-direction:column ; ">
+                            <h5 class="orange" style="font-family: 'Manrope', sans-serif;"> Lyla Rosen</h5>
+                            <div style="margin-top:4px ; "></div>
+                            <h5 style="color: #000000;font-family: 'Manrope', sans-serif;">Chief Product Officer, Micro</h5>
+                        </div>
 
-    <div class="flex-3" style="  background-color: #0f0e0e; ">
-        <h1 style="margin-top: 320px; ">What we <span class="orange">believe</span> in 🤔</h1>
-        <div class=" space2 "></div>
-        <div class="box">
-            <h4>Providing a <span class="orange">forum for young entrepreneurs</span> and assisting them in launching their businesses</h4>
+
+                    </div>
+                </div>
+
+                <div class="box1">
+                    <p style="color: #000000; " class="p1">“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Gravida consectetur nec eros, in. Sed velit enim, egestas interdum sit et. Mi commodo mi nec adipiscing lobortis dui elementum quisque. Placerat tincidunt commodo mauris aliquet
+                        vulputate amet, id tortor, faucibus.”</p>
+                    <div class="flex-internal " style="margin-top: 150px;width: 290px;height: 80px;">
+                        <img src="./homeImage/Frame 25.png " alt=" ">
+                        <div style="margin-left:30px; margin-top:20px;display:flex ; flex-direction:column ; ">
+                            <h5 class="orange" style="font-family: 'Manrope', sans-serif;">Lyla Rosen</h5>
+                            <div style="margin-top:4px ; "></div>
+                            <h5 style="color: #000000;font-family: 'Manrope', sans-serif;">Chief Product Officer, Micro</h5>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div style="margin-top:30px; display: flex;flex-direction: row;">
+                <a href="# " target="_blank " rel="noopener noreferrer " class="tag">See all</a>
+                <div class="ArrowDiv ">></div>
+            </div>
         </div>
-        <div class="box">
-            <h4>Providing useful information that indicates an organization's ability to <span class="orange">function as a cohesive one.</span> </h4>
-        </div>
-        <div class="box">
-            <h4>Organizing entrepreneurial activities to <span class="orange">boost the confidence</span> of aspiring entrepreneurs.</h4>
-        </div>
-        <div class="box">
-            <h4>Implementing an <span class="orange">industry-focused mindset</span> with a distinct perspective on things.</h4>
-        </div>
-        <div class="box">
-            <h4>Aiming in <span class="orange"> providing a hospitable and welcoming environment </span> among team members, collaborators, and participants.</h4>
-        </div>
-    </div>
-    <div class="flex-4" style="  background-color: #0f0e0e; ">
-        <h1 style="margin-top: 130px;">What do <span class=" orange ">they say</span> about us?</h1>
-        <div class="flex-5 ">
-            <div class="box1">
-                <p style="color: #000000;" class="p1">
-                    “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Gravida consectetur nec eros, in. Sed velit enim, egestas interdum sit et. Mi commodo mi nec adipiscing lobortis dui elementum quisque. Placerat tincidunt commodo mauris aliquet vulputate amet,
-                    id tortor, faucibus.”
+        <div class="corousal">
+            <div class="flex-7">
+                <h3 style="color:#000000 ; margin-top: 90px; margin-left: 450px;">We <span class="orange">work</span> with...</h3>
+                <div class="corousal-1">
+                </div>
+                <p class="p5" style="color:#000000 ;  margin-left: 350px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper vel suspendisse pharetra, ultrices. Tortor risus hac varius ipsum. Feugiat nunc feugiat amet ac sit elit pretium. Duis praesent volutpat quis euismod cras maecenas viverra
+                    arcu.
                 </p>
-                <div class=" flex-internal " style="margin-top: 150px;width: 290px;height: 80px;">
-                    <img src="./homeImage/Frame 25.png " alt=" ">
-                    <div style="margin-left:30px; margin-top:20px;display:flex ; flex-direction:column ; ">
-                        <h5 class="orange" style="font-family: 'Manrope', sans-serif;"> Lyla Rosen</h5>
-                        <div style="margin-top:4px ; "></div>
-                        <h5 style="color: #000000;font-family: 'Manrope', sans-serif;">Chief Product Officer, Micro</h5>
+            </div>
+        </div>
+        <div class=" lower ">
+            <div class="flex-6 ">
+                <div class="flex-lower-1 ">
+                    <div class="lower1 ">Let’s Talk <span class="orange ">Business</span></div>
+                    <p class="p2 ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris, faucibus id dignissim massa sed augue ut magna aliquet.</p>
+                </div>
+                <div class="flex-lower-2 ">
+                    <div class="col-1 ">
+                        <label for="fname " class="color2 " style="margin-bottom: 10px; ">Name:</label>
+                        <input type="text " name=" " class="fname1 ">
                     </div>
-
-
-                </div>
-            </div>
-
-            <div class="box1">
-                <p style="color: #000000; " class="p1">“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Gravida consectetur nec eros, in. Sed velit enim, egestas interdum sit et. Mi commodo mi nec adipiscing lobortis dui elementum quisque. Placerat tincidunt commodo mauris aliquet
-                    vulputate amet, id tortor, faucibus.”</p>
-                <div class="flex-internal " style="margin-top: 150px;width: 290px;height: 80px;">
-                    <img src="./homeImage/Frame 25.png " alt=" ">
-                    <div style="margin-left:30px; margin-top:20px;display:flex ; flex-direction:column ; ">
-                        <h5 class="orange" style="font-family: 'Manrope', sans-serif;">Lyla Rosen</h5>
-                        <div style="margin-top:4px ; "></div>
-                        <h5 style="color: #000000;font-family: 'Manrope', sans-serif;">Chief Product Officer, Micro</h5>
+                    <div class="col-1 ">
+                        <label for="femail " class="color2 " style="margin-bottom: 10px; ">Email:</label>
+                        <input type=" email " name=" " class="femail ">
                     </div>
-
-                </div>
-            </div>
-        </div>
-        <div style="margin-top:30px; display: flex;flex-direction: row;">
-            <a href="# " target="_blank " rel="noopener noreferrer ">See all</a>
-            <div class="ArrowDiv ">></div>
-        </div>
-    </div>
-    <div class="corousal">
-        <div class="flex-7">
-            <h3 style="color:#000000 ; margin-top: 90px; margin-left: 450px;">We <span class="orange">work</span> with...</h3>
-            <div class="corousal-1">
-            </div>
-            <p class="p5" style="color:#000000 ;  margin-left: 350px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper vel suspendisse pharetra, ultrices. Tortor risus hac varius ipsum. Feugiat nunc feugiat amet ac sit elit pretium. Duis praesent volutpat quis euismod cras maecenas viverra arcu.</p>
-        </div>
-    </div>
-    <div class=" lower ">
-        <div class="flex-6 ">
-            <div class="flex-lower-1 ">
-                <div class="lower1 ">Let’s Talk <span class="orange ">Business</span></div>
-                <p class="p2 ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris, faucibus id dignissim massa sed augue ut magna aliquet.</p>
-            </div>
-            <div class="flex-lower-2 ">
-                <div class="col-1 ">
-                    <label for="fname " class="color2 " style="margin-bottom: 10px; ">Name:</label>
-                    <input type="text " name=" " class="fname1 ">
-                </div>
-                <div class="col-1 ">
-                    <label for="femail " class="color2 " style="margin-bottom: 10px; ">Email:</label>
-                    <input type=" email " name=" " class="femail ">
-                </div>
-                <div class="col-1 ">
-                    <label for="fmessage " class="color2 " style="margin-bottom: 10px; ">Message:</label>
-                    <input type="text " " name=" " class="fmessage ">
+                    <div class="col-1 ">
+                        <label for="fmessage " class="color2 " style="margin-bottom: 10px; ">Message:</label>
+                        <input type="text " " name=" " class="fmessage ">
         </div>
         <button type="submit " class=" submit1 ">Send</button>
 
@@ -175,6 +177,7 @@
     </div>
 
     </div>
+</div>
     <footer class="desFooter ">
         <div class="logo ">
             <img src="./Img/FedLogo.png " alt=" " class="imglogo ">
